--- a/demos/vanilla-demo/index.html
+++ b/demos/vanilla-demo/index.html
@@ -461,6 +461,313 @@
     ::-webkit-scrollbar-thumb:hover {
       background: #5568d3;
     }
+
+    /* Test Panel Styles */
+    .test-panel {
+      background: white;
+      border-radius: 8px;
+      padding: 20px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    .panel-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+    }
+
+    .panel-header h2 {
+      margin: 0;
+      border: none;
+      padding: 0;
+    }
+
+    .panel-actions {
+      display: flex;
+      gap: 10px;
+    }
+
+    .btn {
+      padding: 8px 16px;
+      border-radius: 4px;
+      border: none;
+      cursor: pointer;
+      font-size: 14px;
+      transition: all 0.2s;
+    }
+
+    .btn-primary {
+      background: #667eea;
+      color: white;
+    }
+
+    .btn-secondary {
+      background: #e5e7eb;
+      color: #333;
+    }
+
+    .btn-sm {
+      padding: 6px 12px;
+      font-size: 12px;
+    }
+
+    .btn-run {
+      background: #10b981;
+      color: white;
+    }
+
+    .panel-progress {
+      margin-bottom: 20px;
+    }
+
+    .progress-bar {
+      height: 8px;
+      background: #e5e7eb;
+      border-radius: 4px;
+      overflow: hidden;
+      margin-bottom: 8px;
+    }
+
+    .progress-fill {
+      height: 100%;
+      background: linear-gradient(90deg, #667eea, #764ba2);
+      transition: width 0.3s;
+    }
+
+    .progress-text {
+      font-size: 12px;
+      color: #666;
+      text-align: center;
+    }
+
+    .test-module {
+      background: #f9fafb;
+      border-radius: 8px;
+      padding: 15px;
+      margin-bottom: 15px;
+    }
+
+    .module-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 10px;
+    }
+
+    .module-info {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .module-number {
+      font-weight: 700;
+      color: #667eea;
+    }
+
+    .module-name {
+      font-weight: 600;
+      color: #333;
+    }
+
+    .module-description {
+      color: #666;
+      font-size: 13px;
+    }
+
+    .module-count {
+      color: #999;
+      font-size: 12px;
+    }
+
+    .module-actions {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .module-status {
+      font-size: 20px;
+    }
+
+    .scenario-item {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      padding: 8px;
+      background: white;
+      border-radius: 4px;
+      margin-bottom: 5px;
+      font-size: 13px;
+    }
+
+    .scenario-icon {
+      font-size: 16px;
+    }
+
+    .scenario-name {
+      font-weight: 500;
+      color: #333;
+      min-width: 120px;
+    }
+
+    .scenario-description {
+      color: #666;
+      font-size: 12px;
+    }
+
+    /* Event Monitor Styles */
+    .event-monitor {
+      background: white;
+      border-radius: 8px;
+      padding: 20px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      height: fit-content;
+    }
+
+    .monitor-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 15px;
+    }
+
+    .monitor-header h3 {
+      margin: 0;
+      font-size: 16px;
+    }
+
+    .monitor-actions {
+      display: flex;
+      gap: 5px;
+    }
+
+    .monitor-stats {
+      display: flex;
+      gap: 15px;
+      margin-bottom: 15px;
+      padding: 10px;
+      background: #f9fafb;
+      border-radius: 4px;
+    }
+
+    .stat-item {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      font-size: 13px;
+    }
+
+    .stat-label {
+      color: #666;
+    }
+
+    .stat-value {
+      font-weight: 600;
+      color: #333;
+    }
+
+    .stat-value.error {
+      color: #ef4444;
+    }
+
+    .event-list {
+      max-height: 600px;
+      overflow-y: auto;
+      border: 1px solid #e5e7eb;
+      border-radius: 4px;
+      padding: 10px;
+      background: #f9fafb;
+    }
+
+    .empty-state {
+      text-align: center;
+      padding: 20px;
+      color: #999;
+      font-size: 14px;
+    }
+
+    .event-item {
+      background: white;
+      border-radius: 4px;
+      padding: 10px;
+      margin-bottom: 8px;
+      border-left: 3px solid #667eea;
+    }
+
+    .event-item.error {
+      border-left-color: #ef4444;
+    }
+
+    .event-item.webVital {
+      border-left-color: #10b981;
+    }
+
+    .event-item.performance {
+      border-left-color: #f59e0b;
+    }
+
+    .event-header {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      margin-bottom: 5px;
+      font-size: 12px;
+    }
+
+    .event-icon {
+      font-size: 14px;
+    }
+
+    .event-type {
+      font-weight: 600;
+      color: #667eea;
+    }
+
+    .event-time {
+      color: #999;
+      margin-left: auto;
+    }
+
+    .event-status {
+      font-size: 14px;
+    }
+
+    .event-content {
+      font-size: 13px;
+      color: #333;
+    }
+
+    .event-message {
+      font-weight: 500;
+      margin-bottom: 5px;
+    }
+
+    .event-stack {
+      font-family: monospace;
+      font-size: 11px;
+      color: #666;
+      background: #f3f4f6;
+      padding: 5px;
+      border-radius: 3px;
+      overflow-x: auto;
+    }
+
+    .event-metric strong {
+      color: #667eea;
+    }
+
+    .badge-slow {
+      display: inline-block;
+      padding: 2px 6px;
+      background: #fef3c7;
+      color: #92400e;
+      border-radius: 3px;
+      font-size: 11px;
+      font-weight: 600;
+    }
   </style>
 </head>
 
@@ -480,14 +787,38 @@
     <!-- Tabs -->
     <div class="tabs">
       <div class="tab-buttons">
-        <button class="tab-button active" onclick="switchTab('integrations')">🔌 Integrations</button>
+        <button class="tab-button active" onclick="switchTab('test-panel')">🧪 测试控制面板</button>
+        <button class="tab-button" onclick="switchTab('integrations')">🔌 Integrations</button>
         <button class="tab-button" onclick="switchTab('sse')">📡 SSE 实时推送</button>
         <button class="tab-button" onclick="switchTab('api')">🔗 REST API</button>
         <button class="tab-button" onclick="switchTab('stats')">📊 统计面板</button>
       </div>
 
+      <!-- Tab 0: 测试控制面板 -->
+      <div class="tab-content active" id="tab-test-panel">
+        <div class="section">
+          <h2>🧪 自动化测试系统</h2>
+          <div class="info-box">
+            <p>完整的 SDK 功能测试套件，包含 13 个测试模块，覆盖所有 11 个 Integration 和传输功能。</p>
+            <p>总测试场景: <strong>76 个</strong></p>
+          </div>
+        </div>
+
+        <div style="display: grid; grid-template-columns: 60% 40%; gap: 20px;">
+          <!-- 左侧：测试控制面板 -->
+          <div>
+            <div id="test-panel"></div>
+          </div>
+
+          <!-- 右侧：实时事件监控 -->
+          <div>
+            <div id="event-monitor"></div>
+          </div>
+        </div>
+      </div>
+
       <!-- Tab 1: Integrations 测试 -->
-      <div class="tab-content active" id="tab-integrations">
+      <div class="tab-content" id="tab-integrations">
         <!-- Breadcrumb Integration -->
         <div class="section">
           <h2>🍞 1. Breadcrumb Integration - 用户行为轨迹</h2>
@@ -826,6 +1157,22 @@
   <script type="module" src="/src/test-functions.js"></script>
   <script type="module" src="/src/sse-dashboard.js"></script>
   <script type="module" src="/src/api-demo.js"></script>
+  
+  <!-- 加载测试UI组件 -->
+  <script type="module">
+    import { initTestPanel } from '/src/ui/test-panel.js'
+    import { initEventMonitor } from '/src/ui/event-monitor.js'
+    
+    // 初始化测试面板和事件监控
+    document.addEventListener('DOMContentLoaded', () => {
+      const testPanel = initTestPanel('test-panel')
+      const eventMonitor = initEventMonitor('event-monitor')
+      
+      // 暴露到全局供调试使用
+      window.testPanel = testPanel
+      window.eventMonitor = eventMonitor
+    })
+  </script>
 </body>
 
 </html>
