--- a/apps/frontend/monitor/index.html
+++ b/apps/frontend/monitor/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="https://skyedu.com/favicon.ico" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>性能与监控平台 | Sky Monitor</title>
     </head>
