--- a/demos/e2e-demo/index.html
+++ b/demos/e2e-demo/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>e2e-demo</title>
+    <meta name="description" content="Sky Monitor SDK E2E 测试演示" />
+    <meta name="theme-color" content="#3b82f6" />
+    <title>Sky Monitor SDK - E2E Demo</title>
   </head>
   <body>
     <div id="root"></div>
