--- a/apps/frontend/monitor/index.html
+++ b/apps/frontend/monitor/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link rel="apple-touch-icon" href="/logo.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>性能与监控平台 | Sky Monitor</title>
+        <meta name="description" content="Sky Monitor - 专业的前端性能监控与错误追踪平台" />
+        <meta name="keywords" content="性能监控,错误追踪,前端监控,APM,Sky Monitor" />
+        <meta name="theme-color" content="#3b82f6" />
+        <title>Sky Monitor | 性能与监控平台</title>
     </head>
     <body>
         <div id="root"></div>
